src/test/ui/parser/issues/issue-58094-missing-right-square-bracket.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-58094-missing-right-square-bracket.rs:4:33
   |
LL | #[Ѕ
   |  - unclosed delimiter           ^

error: aborting due to previous error

