src/test/ui/parser/issues/issue-58094-missing-right-square-bracket.rs
// Fixed in #66054.
// ignore-tidy-trailing-newlines
// error-pattern: aborting due to previous error
#[Ѕ //~ ERROR unclosed delimiter